--- a/src/index.html
+++ b/src/index.html
@@ -56,7 +56,7 @@
       </nav>
     </header>
 
-    <main class="main container">
+    <main class="main">
       <section class="catalog">
         <article data-qa="card" class="catalog__card card">
           <div class="card__photo">
